samples/_failures_safe/1761709486_04b5f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce371710.c: In function ‘main’:
./samples/SAFE/__tmp_ce371710.c:158:17: error: expected expression at end of input
  158 |                 } else if (status ==
      |                 ^
./samples/SAFE/__tmp_ce371710.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce371710.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce371710.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce371710.c:158:17: error: expected declaration or statement at end of input
